--- a/overlay/frameworks/base/core/res/res/values/dimens.xml
+++ b/overlay/frameworks/base/core/res/res/values/dimens.xml
@@ -23,4 +23,13 @@
     <!-- Radius of the software rounded corners at the bottom of the display in its natural
         orientation. If zero, the value of rounded_corner_radius is used. -->
     <dimen name="rounded_corner_radius_bottom">108.0px</dimen>
+
+    <!-- Height of area above QQS where battery/time go -->
+    <!-- <dimen name="quick_qs_offset_height">36dp</dimen> -->
+    
+    <!-- Total height of QQS (quick_qs_offset_height + 128) -->
+    <!-- <dimen name="quick_qs_total_height">162dp</dimen> -->
+    
+    <!-- Height of the bottom navigation / system bar. -->
+    <dimen name="navigation_bar_height">43dp</dimen>
 </resources>
