--- a/overlay/packages/apps/Settings/res/values/config.xml
+++ b/overlay/packages/apps/Settings/res/values/config.xml
@@ -28,6 +28,8 @@
     <string name="config_batChargeCycle">/sys/class/power_supply/bms/cycle_count</string>
     <string name="config_batDesCap">/sys/class/power_supply/bms/charge_full_design</string>
     <string name="config_batCurCap">/sys/class/power_supply/bms/charge_full</string>
+    <integer name="config_batCurCapDivider">1000</integer>
+    <integer name="config_batDesCapDivider">1000</integer>
     <bool name="config_supportBatteryHealth">true</bool>
 
         <!-- Manufacturer backup settings to launch -->
