--- a/overlay/packages/apps/CarrierConfig/res/xml/vendor.xml
+++ b/overlay/packages/apps/CarrierConfig/res/xml/vendor.xml
@@ -449,7 +449,7 @@
         <boolean name="carrier_use_ims_first_for_emergency_bool" value="true" />
         <boolean name="vilte_data_is_metered_bool" value="false" />
         <boolean name="config_retry_sms_over_ims" value="true" />
-        <boolean name="config_update_service_status" value="true" />
+        <boolean name="config_update_service_status" value="false" />
         <string name="carrier_name_string">JIO</string>
         <boolean name="carrier_wfc_ims_available_bool" value="true" />
         <boolean name="carrier_default_wfc_ims_enabled_bool" value="true" />
@@ -483,7 +483,7 @@
         <boolean name="carrier_use_ims_first_for_emergency_bool" value="true" />
         <boolean name="vilte_data_is_metered_bool" value="false" />
         <boolean name="config_retry_sms_over_ims" value="true" />
-        <boolean name="config_update_service_status" value="true" />
+        <boolean name="config_update_service_status" value="false" />
         <string name="carrier_name_string">JIO</string>
         <boolean name="carrier_wfc_ims_available_bool" value="true" />
         <boolean name="carrier_default_wfc_ims_enabled_bool" value="true" />
@@ -517,7 +517,7 @@
         <boolean name="carrier_use_ims_first_for_emergency_bool" value="true" />
         <boolean name="vilte_data_is_metered_bool" value="false" />
         <boolean name="config_retry_sms_over_ims" value="true" />
-        <boolean name="config_update_service_status" value="true" />
+        <boolean name="config_update_service_status" value="false" />
         <string name="carrier_name_string">JIO</string>
         <boolean name="carrier_wfc_ims_available_bool" value="true" />
         <boolean name="carrier_default_wfc_ims_enabled_bool" value="true" />
@@ -551,7 +551,7 @@
         <boolean name="carrier_use_ims_first_for_emergency_bool" value="true" />
         <boolean name="vilte_data_is_metered_bool" value="false" />
         <boolean name="config_retry_sms_over_ims" value="true" />
-        <boolean name="config_update_service_status" value="true" />
+        <boolean name="config_update_service_status" value="false" />
         <string name="carrier_name_string">JIO</string>
         <boolean name="carrier_wfc_ims_available_bool" value="true" />
         <boolean name="carrier_default_wfc_ims_enabled_bool" value="true" />
@@ -585,7 +585,7 @@
         <boolean name="carrier_use_ims_first_for_emergency_bool" value="true" />
         <boolean name="vilte_data_is_metered_bool" value="false" />
         <boolean name="config_retry_sms_over_ims" value="true" />
-        <boolean name="config_update_service_status" value="true" />
+        <boolean name="config_update_service_status" value="false" />
         <string name="carrier_name_string">JIO</string>
         <boolean name="carrier_wfc_ims_available_bool" value="true" />
         <boolean name="carrier_default_wfc_ims_enabled_bool" value="true" />
@@ -619,7 +619,7 @@
         <boolean name="carrier_use_ims_first_for_emergency_bool" value="true" />
         <boolean name="vilte_data_is_metered_bool" value="false" />
         <boolean name="config_retry_sms_over_ims" value="true" />
-        <boolean name="config_update_service_status" value="true" />
+        <boolean name="config_update_service_status" value="false" />
         <string name="carrier_name_string">JIO</string>
         <boolean name="carrier_wfc_ims_available_bool" value="true" />
         <boolean name="carrier_default_wfc_ims_enabled_bool" value="true" />
@@ -653,7 +653,7 @@
         <boolean name="carrier_use_ims_first_for_emergency_bool" value="true" />
         <boolean name="vilte_data_is_metered_bool" value="false" />
         <boolean name="config_retry_sms_over_ims" value="true" />
-        <boolean name="config_update_service_status" value="true" />
+        <boolean name="config_update_service_status" value="false" />
         <string name="carrier_name_string">JIO</string>
         <boolean name="carrier_wfc_ims_available_bool" value="true" />
         <boolean name="carrier_default_wfc_ims_enabled_bool" value="true" />
@@ -687,7 +687,7 @@
         <boolean name="carrier_use_ims_first_for_emergency_bool" value="true" />
         <boolean name="vilte_data_is_metered_bool" value="false" />
         <boolean name="config_retry_sms_over_ims" value="true" />
-        <boolean name="config_update_service_status" value="true" />
+        <boolean name="config_update_service_status" value="false" />
         <string name="carrier_name_string">JIO</string>
         <boolean name="carrier_wfc_ims_available_bool" value="true" />
         <boolean name="carrier_default_wfc_ims_enabled_bool" value="true" />
@@ -721,7 +721,7 @@
         <boolean name="carrier_use_ims_first_for_emergency_bool" value="true" />
         <boolean name="vilte_data_is_metered_bool" value="false" />
         <boolean name="config_retry_sms_over_ims" value="true" />
-        <boolean name="config_update_service_status" value="true" />
+        <boolean name="config_update_service_status" value="false" />
         <string name="carrier_name_string">JIO</string>
         <boolean name="carrier_wfc_ims_available_bool" value="true" />
         <boolean name="carrier_default_wfc_ims_enabled_bool" value="true" />
@@ -755,7 +755,7 @@
         <boolean name="carrier_use_ims_first_for_emergency_bool" value="true" />
         <boolean name="vilte_data_is_metered_bool" value="false" />
         <boolean name="config_retry_sms_over_ims" value="true" />
-        <boolean name="config_update_service_status" value="true" />
+        <boolean name="config_update_service_status" value="false" />
         <string name="carrier_name_string">JIO</string>
         <boolean name="carrier_wfc_ims_available_bool" value="true" />
         <boolean name="carrier_default_wfc_ims_enabled_bool" value="true" />
@@ -789,7 +789,7 @@
         <boolean name="carrier_use_ims_first_for_emergency_bool" value="true" />
         <boolean name="vilte_data_is_metered_bool" value="false" />
         <boolean name="config_retry_sms_over_ims" value="true" />
-        <boolean name="config_update_service_status" value="true" />
+        <boolean name="config_update_service_status" value="false" />
         <string name="carrier_name_string">JIO</string>
         <boolean name="carrier_wfc_ims_available_bool" value="true" />
         <boolean name="carrier_default_wfc_ims_enabled_bool" value="true" />
@@ -823,7 +823,7 @@
         <boolean name="carrier_use_ims_first_for_emergency_bool" value="true" />
         <boolean name="vilte_data_is_metered_bool" value="false" />
         <boolean name="config_retry_sms_over_ims" value="true" />
-        <boolean name="config_update_service_status" value="true" />
+        <boolean name="config_update_service_status" value="false" />
         <string name="carrier_name_string">JIO</string>
         <boolean name="carrier_wfc_ims_available_bool" value="true" />
         <boolean name="carrier_default_wfc_ims_enabled_bool" value="true" />
@@ -857,7 +857,7 @@
         <boolean name="carrier_use_ims_first_for_emergency_bool" value="true" />
         <boolean name="vilte_data_is_metered_bool" value="false" />
         <boolean name="config_retry_sms_over_ims" value="true" />
-        <boolean name="config_update_service_status" value="true" />
+        <boolean name="config_update_service_status" value="false" />
         <string name="carrier_name_string">JIO</string>
         <boolean name="carrier_wfc_ims_available_bool" value="true" />
         <boolean name="carrier_default_wfc_ims_enabled_bool" value="true" />
@@ -891,7 +891,7 @@
         <boolean name="carrier_use_ims_first_for_emergency_bool" value="true" />
         <boolean name="vilte_data_is_metered_bool" value="false" />
         <boolean name="config_retry_sms_over_ims" value="true" />
-        <boolean name="config_update_service_status" value="true" />
+        <boolean name="config_update_service_status" value="false" />
         <string name="carrier_name_string">JIO</string>
         <boolean name="carrier_wfc_ims_available_bool" value="true" />
         <boolean name="carrier_default_wfc_ims_enabled_bool" value="true" />
@@ -925,7 +925,7 @@
         <boolean name="carrier_use_ims_first_for_emergency_bool" value="true" />
         <boolean name="vilte_data_is_metered_bool" value="false" />
         <boolean name="config_retry_sms_over_ims" value="true" />
-        <boolean name="config_update_service_status" value="true" />
+        <boolean name="config_update_service_status" value="false" />
         <string name="carrier_name_string">JIO</string>
         <boolean name="carrier_wfc_ims_available_bool" value="true" />
         <boolean name="carrier_default_wfc_ims_enabled_bool" value="true" />
@@ -959,7 +959,7 @@
         <boolean name="carrier_use_ims_first_for_emergency_bool" value="true" />
         <boolean name="vilte_data_is_metered_bool" value="false" />
         <boolean name="config_retry_sms_over_ims" value="true" />
-        <boolean name="config_update_service_status" value="true" />
+        <boolean name="config_update_service_status" value="false" />
         <string name="carrier_name_string">JIO</string>
         <boolean name="carrier_wfc_ims_available_bool" value="true" />
         <boolean name="carrier_default_wfc_ims_enabled_bool" value="true" />
@@ -993,7 +993,7 @@
         <boolean name="carrier_use_ims_first_for_emergency_bool" value="true" />
         <boolean name="vilte_data_is_metered_bool" value="false" />
         <boolean name="config_retry_sms_over_ims" value="true" />
-        <boolean name="config_update_service_status" value="true" />
+        <boolean name="config_update_service_status" value="false" />
         <string name="carrier_name_string">JIO</string>
         <boolean name="carrier_wfc_ims_available_bool" value="true" />
         <boolean name="carrier_default_wfc_ims_enabled_bool" value="true" />
@@ -1027,7 +1027,7 @@
         <boolean name="carrier_use_ims_first_for_emergency_bool" value="true" />
         <boolean name="vilte_data_is_metered_bool" value="false" />
         <boolean name="config_retry_sms_over_ims" value="true" />
-        <boolean name="config_update_service_status" value="true" />
+        <boolean name="config_update_service_status" value="false" />
         <string name="carrier_name_string">JIO</string>
         <boolean name="carrier_wfc_ims_available_bool" value="true" />
         <boolean name="carrier_default_wfc_ims_enabled_bool" value="true" />
@@ -1061,7 +1061,7 @@
         <boolean name="carrier_use_ims_first_for_emergency_bool" value="true" />
         <boolean name="vilte_data_is_metered_bool" value="false" />
         <boolean name="config_retry_sms_over_ims" value="true" />
-        <boolean name="config_update_service_status" value="true" />
+        <boolean name="config_update_service_status" value="false" />
         <string name="carrier_name_string">JIO</string>
         <boolean name="carrier_wfc_ims_available_bool" value="true" />
         <boolean name="carrier_default_wfc_ims_enabled_bool" value="true" />
@@ -1095,7 +1095,7 @@
         <boolean name="carrier_use_ims_first_for_emergency_bool" value="true" />
         <boolean name="vilte_data_is_metered_bool" value="false" />
         <boolean name="config_retry_sms_over_ims" value="true" />
-        <boolean name="config_update_service_status" value="true" />
+        <boolean name="config_update_service_status" value="false" />
         <string name="carrier_name_string">JIO</string>
         <boolean name="carrier_wfc_ims_available_bool" value="true" />
         <boolean name="carrier_default_wfc_ims_enabled_bool" value="true" />
@@ -1129,7 +1129,7 @@
         <boolean name="carrier_use_ims_first_for_emergency_bool" value="true" />
         <boolean name="vilte_data_is_metered_bool" value="false" />
         <boolean name="config_retry_sms_over_ims" value="true" />
-        <boolean name="config_update_service_status" value="true" />
+        <boolean name="config_update_service_status" value="false" />
         <string name="carrier_name_string">JIO</string>
         <boolean name="carrier_wfc_ims_available_bool" value="true" />
         <boolean name="carrier_default_wfc_ims_enabled_bool" value="true" />
@@ -1163,7 +1163,7 @@
         <boolean name="carrier_use_ims_first_for_emergency_bool" value="true" />
         <boolean name="vilte_data_is_metered_bool" value="false" />
         <boolean name="config_retry_sms_over_ims" value="true" />
-        <boolean name="config_update_service_status" value="true" />
+        <boolean name="config_update_service_status" value="false" />
         <string name="carrier_name_string">JIO</string>
         <boolean name="carrier_wfc_ims_available_bool" value="true" />
         <boolean name="carrier_default_wfc_ims_enabled_bool" value="true" />
@@ -1215,7 +1215,7 @@
             <item value="dun" />
             <item value="supl" />
         </string-array>
-        <boolean name="config_update_service_status" value="true" />
+        <boolean name="config_update_service_status" value="false" />
         <int name="volte_replacement_rat_int" value="6" />
     </carrier_config>
     <carrier_config mcc="455" mnc="07">
@@ -1235,7 +1235,7 @@
             <item value="dun" />
             <item value="supl" />
         </string-array>
-        <boolean name="config_update_service_status" value="true" />
+        <boolean name="config_update_service_status" value="false" />
         <int name="volte_replacement_rat_int" value="6" />
     </carrier_config>
     <carrier_config mcc="460" mnc="00">
@@ -1282,7 +1282,7 @@
         <boolean name="carrier_parse_number_on_forward_call_bool" value="true" />
         <boolean name="carrier_name_override_bool" value="true" />
         <string name="carrier_name_string">China Mobile</string>
-        <boolean name="config_update_service_status" value="true" />
+        <boolean name="config_update_service_status" value="false" />
         <boolean name="vilte_data_is_metered_bool" value="false" />
         <boolean name="support_video_conference_call_bool" value="false" />
         <boolean name="allow_add_call_during_video_call" value="false" />
@@ -1306,7 +1306,7 @@
         <boolean name="carrier_parse_number_on_forward_call_bool" value="true" />
         <boolean name="carrier_name_override_bool" value="true" />
         <string name="carrier_name_string">China Unicom</string>
-        <boolean name="config_update_service_status" value="true" />
+        <boolean name="config_update_service_status" value="false" />
         <boolean name="config_update_volte_icon" value="true" />
         <boolean name="check_mobile_data_for_cf" value="true" />
         <boolean name="vilte_data_is_metered_bool" value="false" />
@@ -1357,7 +1357,7 @@
         <boolean name="carrier_parse_number_on_forward_call_bool" value="true" />
         <boolean name="carrier_name_override_bool" value="true" />
         <string name="carrier_name_string">China Mobile</string>
-        <boolean name="config_update_service_status" value="true" />
+        <boolean name="config_update_service_status" value="false" />
         <boolean name="vilte_data_is_metered_bool" value="false" />
         <boolean name="support_video_conference_call_bool" value="false" />
         <boolean name="allow_add_call_during_video_call" value="false" />
@@ -1390,7 +1390,7 @@
         <boolean name="carrier_name_override_bool" value="true" />
         <string name="carrier_name_string">China Telecom</string>
         <boolean name="config_auto_retry_cfu_bool" value="true" />
-        <boolean name="config_update_service_status" value="true" />
+        <boolean name="config_update_service_status" value="false" />
         <boolean name="allow_add_call_during_video_call" value="false" />
         <boolean name="allow_holding_video_call" value="false" />
         <boolean name="config_common_callsettings_support_bool" value="true" />
@@ -1418,7 +1418,7 @@
         <boolean name="enhanced_4g_lte_on_by_default_bool" value="false" />
         <boolean name="ignore_reset_ut_capability_bool" value="true" />
         <boolean name="carrier_parse_number_on_forward_call_bool" value="true" />
-        <boolean name="config_update_service_status" value="true" />
+        <boolean name="config_update_service_status" value="false" />
         <boolean name="carrier_name_override_bool" value="true" />
         <string name="carrier_name_string">China Telecom</string>
         <int name="volte_replacement_rat_int" value="6" />
@@ -1440,7 +1440,7 @@
         <boolean name="carrier_parse_number_on_forward_call_bool" value="true" />
         <boolean name="carrier_name_override_bool" value="true" />
         <string name="carrier_name_string">China Unicom</string>
-        <boolean name="config_update_service_status" value="true" />
+        <boolean name="config_update_service_status" value="false" />
         <boolean name="config_update_volte_icon" value="true" />
         <boolean name="check_mobile_data_for_cf" value="true" />
         <boolean name="vilte_data_is_metered_bool" value="false" />
@@ -1489,7 +1489,7 @@
         <boolean name="identify_high_definition_calls_in_call_log_bool" value="true" />
         <boolean name="ignore_reset_ut_capability_bool" value="true" />
         <boolean name="carrier_parse_number_on_forward_call_bool" value="true" />
-        <boolean name="config_update_service_status" value="true" />
+        <boolean name="config_update_service_status" value="false" />
         <boolean name="carrier_name_override_bool" value="true" />
         <string name="carrier_name_string">China Mobile</string>
         <boolean name="vilte_data_is_metered_bool" value="false" />
@@ -1538,7 +1538,7 @@
         <boolean name="identify_high_definition_calls_in_call_log_bool" value="true" />
         <boolean name="ignore_reset_ut_capability_bool" value="true" />
         <boolean name="carrier_parse_number_on_forward_call_bool" value="true" />
-        <boolean name="config_update_service_status" value="true" />
+        <boolean name="config_update_service_status" value="false" />
         <boolean name="support_video_conference_call_bool" value="false" />
         <boolean name="allow_add_call_during_video_call" value="false" />
         <boolean name="allow_holding_video_call" value="false" />
@@ -1556,7 +1556,7 @@
         <boolean name="config_hide_vt_callforward_option" value="true" />
         <boolean name="carrier_parse_number_on_forward_call_bool" value="true" />
         <string name="carrier_name_string">China Unicom</string>
-        <boolean name="config_update_service_status" value="true" />
+        <boolean name="config_update_service_status" value="false" />
         <boolean name="config_update_volte_icon" value="true" />
         <boolean name="check_mobile_data_for_cf" value="true" />
         <boolean name="vilte_data_is_metered_bool" value="false" />
@@ -1596,7 +1596,7 @@
         <boolean name="ignore_reset_ut_capability_bool" value="true" />
         <boolean name="carrier_parse_number_on_forward_call_bool" value="true" />
         <boolean name="config_auto_retry_cfu_bool" value="true" />
-        <boolean name="config_update_service_status" value="true" />
+        <boolean name="config_update_service_status" value="false" />
         <boolean name="allow_add_call_during_video_call" value="false" />
         <boolean name="allow_holding_video_call" value="false" />
         <boolean name="config_common_callsettings_support_bool" value="true" />
