overlay: correct location of pinned files
*E PinnerService: Failed to pin file = /system/framework/arm64/boot-framework.vdex
*E E PinnerService: Failed to pin file = /system/framework/arm64/boot.oat

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -865,10 +865,10 @@
 	
     <!-- Default list of files pinned by the Pinner Service -->
     <string-array translatable="false" name="config_defaultPinnerServiceFiles">
-        <item>/system/framework/arm64/boot.oat</item>
-        <item>/apex/com.android.art/javalib/arm64/boot.vdex</item>
+        <item>"/apex/com.android.art/javalib/arm64/boot.oat"</item>
+        <item>"/apex/com.android.art/javalib/arm64/boot.vdex"</item>
         <item>"/system/framework/arm64/boot-framework.oat"</item>
-        <item>/system/framework/arm64/boot-framework.vdex</item>
+        <item>"/system/framework/boot-framework.vdex"</item>
         <item>"/system/framework/framework.jar"</item>
         <item>"/system/framework/oat/arm64/services.odex"</item>
         <item>"/apex/com.android.art/javalib/arm64/boot-core-libart.oat"</item>
