--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -672,13 +672,19 @@
          that can be set by the user. -->
     <integer name="config_screenBrightnessDim">10</integer>
 
-    <!-- Default screen brightness setting.
-         Must be in the range specified by minimum and maximum. -->
-    <integer name="config_screenBrightnessSettingDefault">102</integer>
+     <!-- Minimum screen brightness setting allowed by power manager.
+          The user is forbidden from setting the brightness below this level.
+          Equivalent to 1/255. -->
+    <item name="config_screenBrightnessSettingMinimumFloat" format="float" type="dimen">0.0</item>
 
-    <!-- Minimum screen brightness setting allowed by the power manager.
-         The user is forbidden from setting the brightness below this level. -->
-    <integer name="config_screenBrightnessSettingMinimum">1</integer>
+     <!-- The user is forbidden from setting the brightness above this level.
+          Equivalent to 255/255. -->
+     <item name="config_screenBrightnessSettingMaximumFloat" format="float" type="dimen">1.0</item>
+
+     <!-- Default screen brightness setting set.
+         Must be in the range specified by minimum and maximum.
+         Equivalent to 128/255. -->
+     <item name="config_screenBrightnessSettingDefaultFloat" format="float" type="dimen">0.5</item>
 
     <!-- Stability requirements in milliseconds for accepting a new brightness level.  This is used
          for debouncing the light sensor.  Different constants are used to debounce the light sensor
