overlay: slow down auto brightness ramp rate

--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -686,6 +686,9 @@
          Equivalent to 128/255. -->
      <item name="config_screenBrightnessSettingDefaultFloat" format="float" type="dimen">0.5</item>
 
+     <!-- Slow brightness animation ramp rate in float. -->
+     <item name="config_brightnessRampRateSlowFloat" format="float" type="dimen">0.025</item>
+
     <!-- Stability requirements in milliseconds for accepting a new brightness level.  This is used
          for debouncing the light sensor.  Different constants are used to debounce the light sensor
          when adapting to brighter or darker environments.  This parameter controls how quickly
