--- a/overlay-aicp/frameworks/base/core/res/res/values/custom_config.xml
+++ b/overlay-aicp/frameworks/base/core/res/res/values/custom_config.xml
@@ -53,4 +53,8 @@
     <integer name="config_sysBatteryTempMultiplier">10</integer>
     <string name="config_sysGPUFreq">/sys/kernel/gpu/gpu_clock</string>
     <string name="config_sysGPULoad">/sys/kernel/gpu/gpu_busy</string>
+
+     <!-- Statusbar Left-Right padding defaults -->
+    <integer name="config_statusbarPaddingStartDefault">5</integer>
+    <integer name="config_statusbarPaddingEndDefault">5</integer>
 </resources>
