--- a/overlay-arrow/frameworks/base/core/res/res/values/custom_config.xml
+++ b/overlay-arrow/frameworks/base/core/res/res/values/custom_config.xml
@@ -37,8 +37,8 @@
          before setting power profiles on boot. -->
     <bool name="config_waitForMpctlOnBoot">true</bool>
 
-     <!-- Whether to show settings for hiding notch fill -->
-    <bool name="config_showHideNotchSettings">true</bool>
+    <!-- Whether device has a physical display cutout -->
+    <bool name="config_physicalDisplayCutout">true</bool>
 
     <!-- Controls the navigation bar interaction mode:
          0: 3 button mode (back, home, overview buttons)
