WifiOverlay: Relax RSSI thresholds
    WifiOverlay: Relax RSSI thresholds

* Fixes random WIFI crashes
* Log:
    E/WifiVendorHal(1633): stopRssiMonitoring(l.2100) failed {.code = ERROR_NOT_AVAILABLE, .description = }
    V/WifiClientModeImpl(1633): stopIpClient IpClientWithPreConnection: false
    V/WifiClientModeImpl(1633): java.lang.Throwable
    V/WifiClientModeImpl(1633):     at com.android.server.wifi.ClientModeImpl.stopIpClient(ClientModeImpl.java:1068)
    V/WifiClientModeImpl(1633):     at com.android.server.wifi.ClientModeImpl.stopDhcpSetup(ClientModeImpl.java:1083)
    V/WifiClientModeImpl(1633):     at com.android.server.wifi.ClientModeImpl.handleNetworkDisconnect(ClientModeImpl.j
ava:2760)
    V/WifiClientModeImpl(1633):     at com.android.server.wifi.ClientModeImpl.access$5600(ClientModeImpl.java:163)
    V/WifiClientModeImpl(1633):     at com.android.server.wifi.ClientModeImpl$ConnectModeState.processMessage(ClientMo
deImpl.java:4284)
    V/WifiClientModeImpl(1633):     at com.android.wifi.x.com.android.internal.util.StateMachine$SmHandler.processMsg(
StateMachine.java:992)
    V/WifiClientModeImpl(1633):     at com.android.wifi.x.com.android.internal.util.StateMachine$SmHandler.handleMessa
ge(StateMachine.java:809)
    V/WifiClientModeImpl(1633):     at android.os.Handler.dispatchMessage(Handler.java:106)
    V/WifiClientModeImpl(1633):     at android.os.Looper.loop(Looper.java:223)
    V/WifiClientModeImpl(1633):     at android.os.HandlerThread.run(HandlerThread.java:67)
    D/DhcpClient(2452): doQuit
    D/QCNEJ/WlanStaInfoRelay(2529): Received action: android.net.wifi.STATE_CHANGE
    D/QCNEJ/WlanStaInfoRelay(2529): reset CountryCodeRetriever
    D/ApfFilter(2452): (wlan0): shutting down
    I/WifiClientModeImpl(1633): disconnectedstate enter
    E/WifiScoringParams(1633): Invalid frequency(-1), using 5G as default rssi array
    D/WifiNetworkAgent(1633): NetworkAgent: NetworkAgent channel lost
    I/GnssNetworkConnectivityHandler(1633): Network c

--- a/rro_overlays/WifiOverlay/res/values/config.xml
+++ b/rro_overlays/WifiOverlay/res/values/config.xml
@@ -94,6 +94,13 @@
     <!-- Integer delay in milliseconds before set wlan interface up during watchdog recovery -->
     <integer name="config_wifi_framework_recovery_timeout_delay">3000</integer>
 
+    <!-- Integer thresholds, do not connect to APs with RSSI lower than these values  -->
+    <integer translatable="false" name="config_wifi_framework_wifi_score_entry_rssi_threshold_5GHz">-85</integer>
+    <integer translatable="false" name="config_wifi_framework_wifi_score_entry_rssi_threshold_24GHz">-85</integer>
+    <!-- Integer thresholds for low network score, should be somewhat less than the entry thresholds -->
+    <integer translatable="false" name="config_wifi_framework_wifi_score_bad_rssi_threshold_5GHz">-90</integer>
+    <integer translatable="false" name="config_wifi_framework_wifi_score_bad_rssi_threshold_24GHz">-93</integer>
+
     <!-- Do not translate. Default access point SSID used for tethering -->
     <string name="wifi_tether_configure_ssid_default" translatable="false">Lenovo Z6SE</string>
 </resources>
