overlay: Update deprecated screen power items
* ambient.on -> ambient.on.display0
* screen.on -> screen.on.display0
* screen.full -> screen.full.display0

AOSP frameworks/base: 8ac63071a4e6da7e0740f5eb6c6753218efcfd3a

--- a/overlay/frameworks/base/core/res/res/xml/power_profile.xml
+++ b/overlay/frameworks/base/core/res/res/xml/power_profile.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <device name="Android">
     <item name="none">0</item>
-    <item name="ambient.on">24</item>
-    <item name="screen.on">79.01</item>
-    <item name="screen.full">320</item>
+    <item name="ambient.on.display0">24</item>
+    <item name="screen.on.display0">79.01</item>
+    <item name="screen.full.display0">320</item>
     <item name="camera.flashlight">142.81</item>
     <item name="camera.avg">401.73</item>
     <item name="wifi.on">0.02</item>
