[riceDroid] overlay: pin launcher app in memory
* this is important for latency, keeping launcher in memory helps in reducing latency spikes when switching to home screen.
* L3's memory impact isnt that big anyway and config_pinnerHomeApp overlay was remove as redundancy since most of L3's resources were already loaded in memory, though that is probably near vanilla L3 and we have some modifications like icon pack, hotseat etc so this case might be different.

--- a/overlay-lineage/frameworks/base/core/res/res/values/custom_config.xml
+++ b/overlay-lineage/frameworks/base/core/res/res/values/custom_config.xml
@@ -15,6 +15,9 @@
      for different hardware and product builds.  Do not translate. -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
+    <!-- Should the pinner service pin the Home application? -->
+    <bool name="config_pinnerHomeApp">true</bool>
+
      <!-- Pocket Lock -->
     <bool name="config_pocketModeSupported">false</bool>
     <bool name="config_pocketUseLightSensor">false</bool>
