[riceDroid] overlay: Increase display blanking delay
* reference: https://github.com/RiceDroid/android_frameworks_base/commit/41b4c8deb9649439ed2b1e22189fae3c88738136

--- a/overlay-lineage/frameworks/base/core/res/res/values/custom_config.xml
+++ b/overlay-lineage/frameworks/base/core/res/res/values/custom_config.xml
@@ -50,6 +50,9 @@
          2: gestures only for back, home and overview -->
     <integer name="config_navBarInteractionMode">2</integer>
 
+    <!-- Screen off delay -->
+    <integer name="config_screen_off_delay">1000</integer>
+
     <!-- System Info -->
     <bool name="config_supportSystemInfo">true</bool>
 
