[Spark] overlay: enable Smart Charging

--- a/overlay-spark/frameworks/base/core/res/res/values/custom_config.xml
+++ b/overlay-spark/frameworks/base/core/res/res/values/custom_config.xml
@@ -57,4 +57,11 @@
     <integer name="config_sysBatteryTempMultiplier">10</integer>
     <string name="config_sysGPUFreq">/sys/kernel/gpu/gpu_clock</string>
     <string name="config_sysGPULoad">/sys/kernel/gpu/gpu_busy</string>
+
+    <!-- Smart charging -->
+    <integer name="config_smartChargingBatteryLevel">80</integer>
+    <integer name="config_smartChargingBatteryResumeLevel">70</integer>
+    <string name="config_SmartChargingSysfsNode" translatable="false">/sys/class/power_supply/battery/input_suspend</string>
+    <string name="config_SmartChargingSuspendValue" translatable="false">1</string>
+    <string name="config_SmartChargingResumeValue" translatable="false">0</string>
 </resources>
