--- a/overlay-spark/packages/apps/Settings/res/values/custom_config.xml
+++ b/overlay-spark/packages/apps/Settings/res/values/custom_config.xml
@@ -2,6 +2,9 @@
 
 <resources>
 
+    <!-- Smart Charging -->
+    <bool name="config_supportSmartCharging">true</bool>
+
     <!-- Battery Health -->
     <string name="config_batChargeCycle">/sys/class/power_supply/bms/cycle_count</string>
     <string name="config_batDesCap">/sys/class/power_supply/bms/charge_full_design</string>
