--- a/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
+++ b/overlay/frameworks/base/packages/SystemUI/res/values/config.xml
@@ -24,8 +24,8 @@
     <!-- Doze: does this device support STATE_DOZE?  -->
     <bool name="doze_display_state_supported">true</bool>
 
-    <string name="config_cpuTempSensor">/sys/class/thermal/thermal_zone7/temp</string>
-    <integer name="config_cpuTempDivider" translatable="false">1</integer>
+    <!-- <string name="config_cpuTempSensor">/sys/class/thermal/thermal_zone7/temp</string> -->
+    <!-- <integer name="config_cpuTempDivider" translatable="false">1</integer> -->
 
     <!-- Max visible notification icons -->
     <integer name="config_maxVisibleNotificationIcons">6</integer>
