overlay: Disallow aux cam usage for Zoom
Zoom seems to try using camera ID 2 for the back camera instead of
camera ID 0. Block access to aux camera for Zoom to force it to use
camera ID 0 for the back camera.

--- a/overlay-lineage/lineage-sdk/lineage/res/res/values/config.xml
+++ b/overlay-lineage/lineage-sdk/lineage/res/res/values/config.xml
@@ -75,8 +75,9 @@
         <item>com.exteragram.messenger</item>
         <item>com.microsoft.teams</item>
         <item>com.discord</item>
+        <item>us.zoom.videomeetings</item>
     </string-array>
-    
+
     <!-- The list of components which should be automatically disabled for a specific device. -->
     <string-array name="config_deviceDisabledComponents" translatable="false">
         <item>com.google.android.gms/.chimera.GmsIntentOperationService$PersistentTrustedReceiver</item>
