overlay: Disallow aux cam usage for Zoom
Zoom seems to try using camera ID 2 for the back camera instead of
camera ID 0. Block access to aux camera for Zoom to force it to use
camera ID 0 for the back camera.

--- a/overlay-aicp/frameworks/base/core/res/res/values/custom_config.xml
+++ b/overlay-aicp/frameworks/base/core/res/res/values/custom_config.xml
@@ -100,6 +100,7 @@
         <item>com.exteragram.messenger</item>
         <item>com.microsoft.teams</item>
         <item>com.discord</item>
+        <item>us.zoom.videomeetings</item>
     </string-array>
 
     <!-- Temp nodes -->
